# PacketPulse

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
packetpulse/: __init__.py  cli.py
packetpulse/core/: config.py  logger.py
packetpulse/dns/: dns_monitor.py
packetpulse/forensics/: forensics.py
packetpulse/sensor/: sensor.py
packetpulse/urlscan/: url_scanner.py
packetpulse/utils/: helpers.py
scripts/: build-binary.ps1  publish.ps1  release.py  simulate_malicious_urls.sh
