[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "packetpulse"
version = "1.0.0"
description = "Terminal-based modular cybersecurity monitoring platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "PacketPulse Contributors" }]
keywords = ["cybersecurity", "network", "packet", "ids", "forensics", "urlscan"]

dependencies = [
    "scapy>=2.5.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "dnspython>=2.4.0",
    "python-whois>=0.8.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "geoip2>=4.7.0",
    "maxminddb>=2.3.0",
    "pyudev>=0.24.0",
    "manuf>=1.1.5",
    "tldextract>=5.1.0",
    "urllib3>=2.0.0",
    "cryptography>=41.0.0",
    "python-nmap>=0.7.1",
]

[project.scripts]
packetpulse = "packetpulse.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["packetpulse*"]
